# shannon_bench

./: .coverage  GEMINI.md  README.md  Taskfile.yml  coverage.xml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  lint.yml  test.yml
api/: index.html
docs/: api.md  index.md
examples/: ssb_simulation.py
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/api/: index.html
site/search/: search_index.json
src/shannon_bench/: __init__.py  config.py  config_test.py  setup_logging.py
src/shannon_bench/simulator/: __init__.py  channels.py  channels_test.py  impairements.py  impairments_test.py  ssb_system.py  ssb_system_test.py  transmission_system.py  transmission_system_test.py
