[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shannon_bench"]

[project]
name = "shannon-bench"
version = "0.1.0"
description = "A benchmarking tool for noisy channels"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "etils[epath]>=1.13.0",
    "numpy>=2.3.5",
    "pydantic>=2.0.0",
    "scipy>=1.16.3",
    "typer>=0.20.0",
]

[tool.ruff]
target-version = "py314"
line-length = 88
indent-width = 2

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",    # 1 blank line required before class docstring (conflicts with D211)
    "D213",    # Multi-line docstring summary should start at the second line (conflicts with D212)
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
    "D107",    # Missing docstring in __init__ (Pydantic models have class docstrings)
    "ANN003",  # Missing type annotation for **kwargs (Pydantic models)
    "ARG002",  # Unused method argument (interface implementations)
    "D102",    # Missing docstring in public method (properties are self-explanatory)
    "ERA001",  # Found commented-out code (mathematical formulas in comments)
    "PLR2004", # Magic value used in comparison (acceptable for physical constants)
    "G004",    # Logging statement uses f-string (more readable than % formatting)
    "TC003",   # Move stdlib import into TYPE_CHECKING (Pydantic needs runtime imports)
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
python_files = "*_test.py"
testpaths = ["src"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.7",
    "ty>=0.0.1a29",
]

[tool.coverage.run]
parallel = true
branch = true
omit = ["*_test.py"]

[tool.ruff.lint.per-file-ignores]
"*_test.py" = [
    "S101",    # Use of assert detected
    "PLR2004", # Magic value used in comparison
    "NPY002",  # Replace legacy numpy.random calls
    "ANN001",  # Missing type annotation for function argument (pytest parametrize)
    "BLE001",  # Do not catch blind exception
    "B007",    # Loop control variable not used
    "N806",    # Variable in function should be lowercase (e.g., Pxx for power spectral density)
    "SLF001",  # Private member accessed (testing internal state)
    "E501",    # Line too long (docstrings)
    "INP001",  # Implicit namespace package
    "D102",    # Missing docstring in public method (test methods)
    "D107",    # Missing docstring in __init__
]
